Increase code coverage